# AINewtrendsReport

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  alembic.ini  pyproject.toml
alembic/: .gitkeep  env.py
alembic/versions/: 3a61b1c8c1b0_add_use_smart_planner_to_schedules.py  a1b2c3d4e5f6_add_wiki_push_columns.py  dc09fc4f2f6d_baseline_all_tables.py  dc24a2937581_add_missing_columns.py  dcee284395e0_add_timezone_to_schedules.py
conductor/: patterns.md  patterns.md.bak  product-guidelines.md  product.md  product.md.bak  refresh_state.json  tech-stack.md  tech-stack.md.bak  tracks.md  workflow.md
conductor/archive/admin-ui_20260508/: learnings.md  metadata.json  plan.md
conductor/archive/backend-api-celery_20260508/: learnings.md  spec.md
conductor/archive/bugfix-critical-high_20260510/: implement_state.json  learnings.md  plan.md  spec.md
conductor/archive/data-layer_20260507/: learnings.md  metadata.json  plan.md  spec.md
conductor/archive/deploy-hardening_20260508/: implement_state.json  learnings.md  plan.md
conductor/archive/exporters-templates_20260508/: implement_state.json  spec.md
conductor/archive/foundations_20260507/: learnings.md  metadata.json  spec.md
conductor/archive/langgraph-workflow_20260508/: learnings.md  metadata.json  plan.md  spec.md
conductor/archive/llm-tools_20260507/: implement_state.json  learnings.md
conductor/archive/progress-ui_20260508/: metadata.json  plan.md
conductor/archive/report-preview_20260509/: plan.md  spec.md
conductor/archive/ui-ux-polish_20260509/: spec.md
conductor/code_styleguides/: frontend.md  python.md  sql.md
conductor/tracks/: sites-ui-ux.md
conductor/tracks/admin-ui_20260508/: implement_state.json  learnings.md  plan.md  spec.md
conductor/tracks/backend-api-celery_20260508/: implement_state.json  metadata.json  plan.md
conductor/tracks/bugfix-critical-high_20260510/: implement_state.json  metadata.json
conductor/tracks/deploy-hardening_20260508/: metadata.json  plan.md  spec.md
conductor/tracks/exporters-templates_20260508/: learnings.md  metadata.json  plan.md
conductor/tracks/foundations_20260507/: learnings.md  plan.md
conductor/tracks/langgraph-workflow_20260508/: implement_state.json  learnings.md  plan.md
conductor/tracks/llm-tools_20260507/: learnings.md  metadata.json  plan.md  spec.md
conductor/tracks/progress-ui_20260508/: implement_state.json  learnings.md  plan.md  spec.md
conductor/tracks/report-preview_20260509/: implement_state.json  learnings.md  metadata.json  plan.md
conductor/tracks/ui-ux-polish_20260509/: implement_state.json  learnings.md  metadata.json  plan.md
deploy/: install.sh  stop.sh  update.sh
deploy/cron/: .gitkeep  ainews  ainews-backup
deploy/logrotate/: ainews
deploy/nginx/: .gitkeep
deploy/scripts/: backup_db.sh
deploy/systemd/: .gitkeep  ainews-api.service  ainews-beat.service  ainews-worker.service
docs/: architecture.md  operations.md
docs/superpowers/plans/: 2026-05-09-dashboard-ui-ux-refactoring.md  (+2 more)
src/ainews/: __init__.py  cli.py  seed.py
tests/: test_admin_auth.py  test_admin_crud.py  test_admin_dashboard.py  test_admin_foundation.py  test_admin_pages.py  test_api.py  test_celery.py  test_cli.py  test_cli_run.py  test_config.py  test_database.py  test_integration.py  test_logging.py  test_migration.py  test_models_article.py  test_models_run.py  test_models_schedule.py  test_models_site.py  test_models_supporting.py  test_partials.py  test_report_preview.py  test_schemas.py  test_seed.py  test_seed_cli.py  test_service.py  test_trigger_cli.py
tests/agents/: __init__.py  test_graph.py  test_prompts.py  test_resilience.py  test_state.py
tests/api/: test_csp.py  test_health.py
tests/core/: test_log_masking.py  test_run_caps.py
tests/deploy/: __init__.py  test_deploy_infra.py
tests/e2e/: test_smoke.py
tests/exporters/: __init__.py  test_markdown.py  test_xlsx.py
tests/llm/: test_concurrency.py  test_config.py  test_connection.py  test_factory.py
tests/services/: __init__.py  test_run_logger.py
tests/tools/: test_cache.py  test_dedup.py  test_rate_limiter.py  test_scraper.py  test_tavily_guard.py  test_tavily_search.py
(+124 files in other folders)
