[project]
name = "ainews"
version = "0.1.0"
description = "Automated AI news intelligence pipeline — gather, process, and synthesize AI industry trends into structured reports."
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "typer>=0.15",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
]

[project.scripts]
ainews = "ainews.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ainews"]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-cov>=6.1",
    "pre-commit>=4.2",
]
