[project]
name = "ainews"
version = "0.1.0"
description = "Automated AI news intelligence pipeline — gather, process, and synthesize AI industry trends into structured reports."
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "typer>=0.15",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "langchain-openai>=0.3",
    "langchain-tavily>=0.1",
    "httpx>=0.28",
    "trafilatura>=2.0",
    "cachetools>=5.5",
    "tenacity>=9.0",
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
playwright = ["playwright>=1.50"]

[project.scripts]
ainews = "ainews.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ainews"]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-cov>=6.1",
    "pre-commit>=4.2",
    "respx>=0.22",
    "pytest-asyncio>=0.26",
    "types-jinja2>=0.1",
]

# ---------- Ruff ----------
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".agents", ".beads", ".claude", "alembic"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["ainews"]

# ---------- mypy ----------
[tool.mypy]
strict = true
packages = ["ainews"]
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ainews --cov-report=term-missing --strict-markers"
markers = [
    "integration: marks tests that require real external services (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
